# badpiggies-level-converter

./: Cargo.toml  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: reader.rs  types.rs  writer.rs
preview/: index.html
test_levels/: Level_01_data.toml  Level_01_data.yaml  Level_02_data.toml  Level_02_data.yaml  Level_03_data.toml  Level_03_data.yaml  Level_04_data.toml  Level_04_data.yaml  Level_06_data.toml  Level_06_data.yaml  Level_07_data.toml  Level_07_data.yaml  Level_08_data.toml  Level_08_data.yaml  Level_09_data.toml  Level_09_data.yaml  Level_10_data.toml  Level_10_data.yaml  Level_11_data.toml  Level_11_data.yaml  Level_12_data.toml  Level_12_data.yaml  Level_13_data.toml  Level_13_data.yaml  Level_16_data.toml  Level_16_data.yaml  Level_19_data.toml  Level_19_data.yaml  Level_34_data.toml  Level_34_data.yaml  Level_35_data.toml  Level_35_data.yaml  Level_36_data.toml  Level_36_data.yaml  Level_37_data.toml  Level_37_data.yaml  Level_38_data.toml  Level_38_data.yaml  Level_39_data.toml  Level_39_data.yaml  (+16 more)
